--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -1,6 +1,5 @@
 .catalog {
     padding-bottom: 100px;
-
     &__tabs {
         margin-top: 70px;
         list-style-type: none;
@@ -64,7 +63,7 @@
         border: 2px solid #e8e8e8;
         padding: 20px 20px 26px 20px;
         overflow: hidden;
-        margin-bottom: 20px;
+        margin: 0 auto 20px auto;
 
         &__img {
             display: block;
