--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -12,7 +12,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 380px;
+    max-width: 380px;
     min-height: 400px;
     background-color: #f2f2f2;
     padding: 38px 40px 40px 40px;
