add adaprive promo

--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -40,6 +40,15 @@
            }
         }
     }
+    .promo__icons{
+        flex-direction: column;
+        .promo__icon{
+            display: flex;
+            div{
+                margin-left: 50px;
+            }
+        }
+    }
 }
 
 @media (max-width: 575px){
@@ -61,6 +70,19 @@
         }
         &__tab{
             margin-top: 10px;
+        }
+    }
+    .promo__icons{
+        margin: 20px auto;
+    }
+}
+@media (max-width: 575px){
+    .carousel{
+        &__inner{
+            width: 300px;
+           img{
+            width: 300px;
+           }
         }
     }
 }
